--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -2,6 +2,6 @@
 
 = Introduction =
 
-The Windows executable is to be found at: []
+The Windows executable is to be found at: [https://code.google.com/p/sav2sss/source/browse/trunk/output/sav2sss.exe]
 
-Documentation is at: []
+Documentation is at: [https://code.google.com/p/sav2sss/source/browse/trunk/output/readme.html]
